force-app/main/default/objects/loan__Client__c/loan__Client__c.object-meta.xml
<CustomObject>
    <description>Borrower</description>
    <label>Client</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Client ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>