force-app/main/default/objects/loan__Client__c/fields/loan__Employment_Business_Details_Count__c.field-meta.xml
<CustomField>
    <fullName>loan__Employment_Business_Details_Count__c</fullName>
    <label>Employment/Business Details Count</label>
    <summaryForeignKey>loan__Employment_Business_Detail__c.loan__Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>