force-app/main/default/objects/loan__Client__c/fields/loan__Fee_Set__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fee Set for Client Registration</description>
    <inlineHelpText>Fee Set for Client registration</inlineHelpText>
    <label>Fee Set</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Fee Set&apos;s category must be of type &apos;Client&apos; and it should include at least one fee.</errorMessage>
        <filterItems>
            <field>loan__Fee_Set__c.loan__Fee_Set_Category__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>loan__Fee_Set__c.loan__Number_of_Fees__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Fee_Set__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>