force-app/main/default/objects/loan__Client__c/fields/loan__Spouse_Father_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Spouse_Father_s_Last_Name__c</fullName>
    <description>Spouse&apos;s or Father&apos;s Family Name</description>
    <label>Spouse/Father&apos;s Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>