force-app/main/default/objects/loan__Client__c/validationRules/loan__Address3_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Address3_Special_char_check</fullName>
    <active>false</active>
    <description>Address Special_char_check</description>
    <errorConditionFormula>NOT(REGEX( loan__Address_3__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Address_3__c</errorDisplayField>
    <errorMessage>Address should not include special characters</errorMessage>
</ValidationRule>