force-app/main/default/objects/loan__Client__c/validationRules/loan__Center_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Center_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(loan__Center__c)) &amp;&amp; NOT(ISBLANK( loan__Group__c )) &amp;&amp; ( loan__Group__r.loan__Center__c !=  loan__Center__c || ISBLANK(loan__Group__r.loan__Center__c))</errorConditionFormula>
    <errorMessage>User entered Center does not match Center for Group</errorMessage>
</ValidationRule>