force-app/main/default/objects/loan__Client__c/validationRules/loan__Check_Max_Number_of_Persons.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Max_Number_of_Persons</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK( loan__Group__c ) ) &amp;&amp;  (loan__Group__r.loan__Maximum_number_of_persons__c  =  loan__Group__r.loan__Number_of_Active_Clients__c )</errorConditionFormula>
    <errorMessage>You cannot add more clients to this group. The allowable number of clients has already been reached.</errorMessage>
</ValidationRule>