force-app/main/default/objects/loan__Client__c/validationRules/loan__ClientStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ClientStartDate</fullName>
    <active>false</active>
    <description>This will not work here. Will only work in a trigger. Because otherwise you can never make any changes to a client! E.g. add a fee set. So deactivating for now.</description>
    <errorConditionFormula>loan__Client_Start_Date__c  &lt;    TODAY()</errorConditionFormula>
    <errorMessage>The client&apos;s start date cannot be before today.</errorMessage>
</ValidationRule>