force-app/main/default/objects/loan__Client__c/validationRules/loan__EitherCenterOrGroupCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__EitherCenterOrGroupCheck</fullName>
    <active>false</active>
    <description>The client&apos;s Loan Officer and the Group&apos;s/Center&apos;s Loan Officer must be the same.</description>
    <errorConditionFormula>((loan__Group__c &lt;&gt; null) &amp;&amp; ( loan__Loan_Officer__r.Id   &lt;&gt; loan__Group__r.loan__Assigned_LO__r.Id))  || (( loan__Center__c  &lt;&gt; null) &amp;&amp; ( loan__Loan_Officer__r.Id   &lt;&gt;  loan__Center__r.loan__Loan_Officer__r.Id ))</errorConditionFormula>
    <errorMessage>The client&apos;s Loan Officer and the Group&apos;s/Center&apos;s Loan Officer must be the same.</errorMessage>
</ValidationRule>