force-app/main/default/objects/loan__Client__c/validationRules/loan__FirstName_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__FirstName_Special_char_check</fullName>
    <active>true</active>
    <description>FirstName_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(  loan__First_Name__c  , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__First_Name__c</errorDisplayField>
    <errorMessage>First Name should not include special characters</errorMessage>
</ValidationRule>