force-app/main/default/objects/loan__Client__c/validationRules/loan__GovernmentID_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__GovernmentID_Special_char_check</fullName>
    <active>true</active>
    <description>GovernmentID_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(  loan__Government_ID__c  , &quot;^[a-zA-Z0-9-\\s]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Government_ID__c</errorDisplayField>
    <errorMessage>GovernmentID should not include special characters</errorMessage>
</ValidationRule>