force-app/main/default/objects/loan__Client__c/validationRules/loan__Group_Staus_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Group_Staus_check</fullName>
    <active>true</active>
    <description>Group_Staus_check</description>
    <errorConditionFormula>NOT(ISBLANK(loan__Group__c) || ISNULL(loan__Group__c))
&amp;&amp; NOT( ISPICKVAL( loan__Group__r.loan__Group_Status__c , &apos;Approved&apos;) )</errorConditionFormula>
    <errorMessage>The Group is not yet  Approved</errorMessage>
</ValidationRule>