force-app/main/default/objects/loan__Client__c/validationRules/loan__LastName_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__LastName_Special_char_check</fullName>
    <active>true</active>
    <description>LastName_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(   loan__Last_Name__c   , &quot;^[a-zA-Z0-9-\\s]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Last_Name__c</errorDisplayField>
    <errorMessage>Last Name should not include special characters</errorMessage>
</ValidationRule>