force-app/main/default/objects/loan__Client__c/validationRules/loan__MiddleName_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__MiddleName_Special_char_check</fullName>
    <active>true</active>
    <description>MiddleName_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(    loan__Middle_Name__c   , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Middle_Name__c</errorDisplayField>
    <errorMessage>Middle Name should not include special characters</errorMessage>
</ValidationRule>