force-app/main/default/objects/loan__Client__c/validationRules/loan__Spouse_LastName_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Spouse_LastName_Special_char_check</fullName>
    <active>true</active>
    <description>Spouse_LastName_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(      loan__Spouse_Father_s_Last_Name__c    , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Spouse_Father_s_Last_Name__c</errorDisplayField>
    <errorMessage>Last Name should not include special characters</errorMessage>
</ValidationRule>