force-app/main/default/objects/loan__Client__c/validationRules/loan__Telephone_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Telephone_Special_char_check</fullName>
    <active>false</active>
    <description>Telephone_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(  loan__Telephone_No__c    , &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Telephone_No__c</errorDisplayField>
    <errorMessage>Invalid Telephone No.</errorMessage>
</ValidationRule>